Basic news scraping function

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,13 +2,24 @@
 <html>
 
 <head>
+	<meta charset="UTF-8">
+	<meta name="description" content="Free Web tutorials">
+	<meta name="keywords" content="Health, Timathon Submission">
+	<meta name="author" content="HiPeople21">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>{% block title %}{% endblock %}</title>
-	<link rel='stylesheet' href='./styles.css'>
+	<link type="text/css" rel='stylesheet' href='./styles.css'>
+  <!-- <style type='text/css'>
+    body{
+      background-color: blue;
+    }
+  </style> -->
 </head>
 
 <body>
 	<div>{% block content %}{% endblock %}</div>
 	<script src="./script.js">
+
 	</script>
 </body>
 
