--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,10 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} 
 {%block title%}Home{%endblock%}
+
 {%block content%}
-<h1>Hello</h1>
+<div id='news-container'>
+  {% for news, link in content['news'].items() %}
+  <div class='news-item'><a class="news-item-link" href={{link}}>{{news.text}}</a></div>
+  {% endfor %}
+</div>
 {%endblock%}
