--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,19 +8,25 @@
 	<meta name="author" content="HiPeople21">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>{% block title %}{% endblock %}</title>
-	<link type="text/css" rel='stylesheet' href='./styles.css'>
-  <!-- <style type='text/css'>
-    body{
-      background-color: blue;
-    }
-  </style> -->
+
+	<link type="text/css" rel='stylesheet' href='{{url_for("static", filename="styles.css")}}'>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
-	<div>{% block content %}{% endblock %}</div>
-	<script src="./script.js">
+  <header>
+    <div class='navbar-container'>  
+      {% include 'navbar.html' %}
+    </div>
+  </header>
+	<div class='content-container'>
+    {% block content %}
+    {% endblock %}
+  </div>
 
-	</script>
+
+	<script src="{{url_for('static', filename='script.js')}}"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
