--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1,22 +1,39 @@
 .news-container{
   display: flex;
+  flex-direction: column;
   top: 100px;
+  width: 100vw;
+  align-items: center;
 }
+
 .news-item{
-  border: 1px solid black;
-}
-.news-item-link{
-  text-decoration: none;
   text-align: center;
+  margin-bottom: 10px;
+  width: clamp(200px, 75%, 40rem);
+  margin: auto;
 }
+
 .navbar-container{
   position: fixed;
   width: 100vw;
   top: 0;
+  z-index: 1;
+  border: 1px solid black;
 }
 .content-container{
   margin-top: 60px;
 }
-.card{
-  
+
+.news-form{
+  margin: auto;
+}
+
+.news-form-container{
+  flex-direction: column;
+  width: 100vw;
+  align-items: center;
+}
+
+#page{
+  width: 20px;
 }
