--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -8,7 +8,6 @@
 
 .news-item{
   text-align: center;
-  margin-bottom: 10px;
   width: clamp(200px, 75%, 40rem);
   margin: auto;
 }
@@ -29,11 +28,15 @@
 }
 
 .news-form-container{
+  display: flex;
   flex-direction: column;
-  width: 100vw;
+  width: 95vw;
   align-items: center;
+  margin: auto;
+  padding: 10px 10px;
+
 }
 
 #page{
-  width: 20px;
+  width: 75px;
 }
