--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,9 +16,7 @@
 
 <body>
   <header>
-    <div class='navbar-container'>  
-      {% include 'navbar.html' %}
-    </div>
+    {% include 'navbar.html' %}
   </header>
 	<div class='content-container'>
     {% block content %}
@@ -27,8 +25,11 @@
 
 
 	<script src="{{url_for('static', filename='script.js')}}"></script>
+  <script src="{{url_for('static', filename='darkmode.js')}}"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://kit.fontawesome.com/{{content['fa_code']}}.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
