--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -20,39 +20,74 @@
   --background-1: var(--blue-1);
   --background-2: white;
   --background-3: black;
+  --card-header-footer-color: rgb(247,247,247);
+  --card-header-text-color: #212529;
+  --card-footer-text-color: #555555;
+  --card-body-color: white;
+}
+
+.darkmode {
+  --background-1: black;
+  --background-2: rgb(29,32,34);
+  --background-3: white;
+  --card-header-footer-color: rgb(24, 24, 24);
+  --card-header-text-color: white;
+  --card-footer-text-color: #555555;
+  --card-body-color: #3a3a3a;
+}
+
+p {
+  color: var(--background-3);
+}
+
+h3 {
+  color: var(--background-3);
+}
+
+.content-container{
+  background-color: var(--background-2);
+  min-height: 100vh;
+}
+
+
+.covid-img {
+  width: 5em;
+  height: auto;
 }
 
 
 
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --background-1: var(--purple-darkest);
-    --background-2: black;
-    --background-3: white;
-  }
-} */
+/* Start of CSS for news page */
+
+.news-publisher {
+  background-color: var(--card-header-footer-color) !important;
+  color: var(--card-header-text-color) !important;
+}
+
+.news-time {
+  background-color: var(--card-header-footer-color) !important;
+  color: var(--card-footer-text-color) !important;
+}
+
+.news-body {
+  background-color: var(--card-body-color);
+}
+
+.news-title {
+  color: var(--background-3);
+}
 
 .news-container{
   display: flex;
   flex-direction: column;
-  top: 100px;
   width: 100vw;
   align-items: center;
 }
 
 .news-item{
   text-align: center;
-  width: clamp(200px, 75%, 40rem);
-  margin: auto
-
-}
-
-
-
-.content-container{
-  padding-top: 60px;
-  background-color: var(--background-2);
-  min-height: 100vh;
+  width: 75%;
+  margin: auto;
 }
 
 .news-form{
@@ -73,17 +108,34 @@
   width: 75px;
 }
 
+/* End of CSS for news page */
+
+/* Start of navbar CSS */
 header{
   background: var(--background-1);
   text-align: center;
-  position: fixed;
+  position: sticky;
   width: 100%;
   z-index: 5;
   top: 0;
+  height: 2%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .logo {
   color: var(--background-3);
+}
+
+.logo-link {
+  text-decoration: none;
+  color: inherit;
+}
+
+.logo-link:hover {
+  text-decoration: none;
+  color: inherit;
 }
 
 nav{
@@ -129,6 +181,7 @@ nav button {
 
 
 nav a:hover {
+  font-weight: bold;
   color: var(--background-3);
 }
 
@@ -209,17 +262,25 @@ nav a:hover {
 }
 
 @media screen and (min-width: 800px) {
+
+  .content-container {
+    top: 40px;
+  }
+
   .nav-toggle-label {
     display: none;
   }
 
   header {
     display: grid;
-    grid-template-columns: minmax(10px, 100px) auto minmax(600px, 3fr);
+    grid-template-columns: minmax(10px, 100px) auto minmax(10px, 1fr);
+    padding: 10px 0;
   }
 
   .logo {
     grid-column: 2/ span 1;
+    font-size: 2em;
+    white-space: nowrap;
   }
 
   nav{
@@ -244,10 +305,6 @@ nav a:hover {
     position: relative;
   }
 
-  .news-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
 
   nav button {
     opacity: 1;
@@ -274,6 +331,4 @@ nav a:hover {
   }
 }
 
-.darkmode {
-  background-color: rgb(29,32,34) !important;
-}
+/* End of navbar CSS */
