--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,4 +1,4 @@
-<h1 class="logo">Health Informant</h1>
+<h1 class="logo"><a class='logo-link' href='/'>Health Informant</a></h1>
 <input type='checkbox' id='nav-toggle' class='nav-toggle'>
 <nav>
   <ul>
