--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,10 +1,11 @@
 <h1 class="logo"><a class='logo-link' href='/'>Health Informant</a></h1>
 <input type='checkbox' id='nav-toggle' class='nav-toggle'>
-<nav>
+<nav id='nav'>
   <ul>
     <li><a href="/">Home</a></li>
     <li><a href="/news">News</a></li>
     <li><a href="/covid">Covid-19</a></li>
+    <li><a href="#contact">Contact</a></li>
     <li><button id='darkModeToggle'><i class="fas fa-adjust"></i></button></li>
   </ul>
 </nav>
